feat(batch): add support for full scrape and ICA-only batch modes