@@ -1,9 +1,12 @@
 package com.bolaneradar.backend.batch;
 
+import com.bolaneradar.backend.service.integration.scraper.core.ScraperResult;
 import com.bolaneradar.backend.service.integration.scraper.core.ScraperService;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.stereotype.Component;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.time.LocalDateTime;
 
@@ -16,23 +19,23 @@ public class ScraperBatchRunner implements ApplicationRunner {
         this.scraperService = scraperService;
     }
 
+    private static final Logger log =
+            LoggerFactory.getLogger(ScraperBatchRunner.class);
+
     @Override
     public void run(ApplicationArguments args) {
 
-        // Kör endast i batch-läge
+        // Kör endast om --mode är angivet
         if (!args.containsOption("mode")) {
             return;
         }
 
-        String mode = args.getOptionValues("mode").get(0);
-        if (!"scrape".equalsIgnoreCase(mode)) {
-            return;
-        }
+        String mode = args.getOptionValues("mode").getFirst();
 
         long startTime = System.currentTimeMillis();
 
         System.out.println("========================================");
-        System.out.println("Batch start: scraping");
+        System.out.println("Batch start: " + mode);
         System.out.println("Starttid: " + LocalDateTime.now());
         System.out.println("========================================");
 
@@ -40,15 +43,46 @@ public class ScraperBatchRunner implements ApplicationRunner {
         int failureCount = 0;
 
         try {
-            // 🔹 Kör scraping (denna metod ska ALDRIG kasta vidare exceptions)
-            var result = scraperService.scrapeAllBanks();
 
-            successCount = result.successfulBanks();
-            failureCount = result.failedBanks();
+            // =====================================================
+            // FULL SCRAPE – alla banker (CI / daglig körning)
+            // =====================================================
+            if ("scrape".equalsIgnoreCase(mode)) {
+
+                var result = scraperService.scrapeAllBanks();
+                successCount = result.successfulBanks();
+                failureCount = result.failedBanks();
+
+            }
+
+            // =====================================================
+            // ICA ONLY – manuell körning lokalt
+            // =====================================================
+            else if ("scrape-ica".equalsIgnoreCase(mode)) {
+
+                ScraperResult result =
+                        scraperService.runScrapeForBank("ICA Banken");
+
+                if (result.success()) {
+                    successCount = 1;
+                    failureCount = 0;
+                } else {
+                    successCount = 0;
+                    failureCount = 1;
+                }
+
+            }
+
+            // =====================================================
+            // OKÄNT MODE
+            // =====================================================
+            else {
+                System.err.println("Okänt batch-mode: " + mode);
+                System.exit(2);
+            }
 
         } catch (Exception e) {
-            System.err.println("Batch kraschade oväntat");
-            e.printStackTrace();
+            log.error("Batch kraschade oväntat", e);
             System.exit(2);
         }
 
@@ -62,11 +96,11 @@ public class ScraperBatchRunner implements ApplicationRunner {
         System.out.println("Sluttid: " + LocalDateTime.now());
         System.out.println("========================================");
 
-        // Exit codes för automation (GitHub Actions / cron / Render)
+        // Exit codes för automation (CI / cron)
         if (successCount > 0) {
-            System.exit(0); // OK – minst en bank lyckades
+            System.exit(0);
         } else {
-            System.exit(1); // FEL – alla banker misslyckades
+            System.exit(1);
         }
     }
 }
